--- a/db/package.json
+++ b/db/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "genius",
+  "name": "db",
   "version": "1.0.17",
   "type": "app",
   "dependencies": {
-    "hoodie-server": "0.9.24",
-    "hoodie-plugin-appconfig": "~0.1.0",
-    "hoodie-plugin-email": "~0.1.1",
-    "hoodie-plugin-users": "0.1.0"
+    "hoodie-server": "^0.9.24",
+    "hoodie-plugin-appconfig": "^0.1.0",
+    "hoodie-plugin-email": "^0.1.1",
+    "hoodie-plugin-users": "^0.1.0"
   },
   "engines": {
     "node": ">=0.10.22"
   },
-  "subdomain": "hoodie-genius",
+  "subdomain": "hoodie-db",
   "domains": [
-    "admin.hoodie-genius.jit.su",
-    "couch.hoodie-genius.jit.su"
+    "admin.hoodie-db.jit.su",
+    "couch.hoodie-db.jit.su"
   ],
   "scripts": {
     "start": "node node_modules/hoodie-server/bin/start"
