--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "~0.4.0",
     "grunt-bower-install": "~1.0.0",
     "grunt-concurrent": "~0.5.0",
@@ -27,7 +27,8 @@
     "jshint-stylish": "~0.1.3",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1",
-    "grunt-hoodie": "~0.3.0"
+    "grunt-hoodie": "~0.3.0",
+    "grunt-connect-proxy": "^0.1.10"
   },
   "engines": {
     "node": ">=0.10.0"
