Add account bar

--- a/db/package.json
+++ b/db/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.17",
   "type": "app",
   "dependencies": {
-    "hoodie-server": "^0.9.24",
+    "hoodie-server": "0.9.19",
     "hoodie-plugin-appconfig": "^0.1.0",
-    "hoodie-plugin-email": "^0.1.1",
-    "hoodie-plugin-users": "^0.1.0"
+    "hoodie-plugin-email": "^0.1.4",
+    "hoodie-plugin-users": "^0.1.0",
+    "hoodie-plugin-social": "^0.9.10"
   },
   "engines": {
     "node": ">=0.10.22"
@@ -23,7 +24,8 @@
     "plugins": [
       "hoodie-plugin-appconfig",
       "hoodie-plugin-email",
-      "hoodie-plugin-users"
+      "hoodie-plugin-users",
+      "hoodie-plugin-social"
     ]
   }
 }
