--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "1.2.15",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
+    "hoodie": "~0.8.2",
     "jquery": "~1.11.0",
     "bootstrap-sass-official": "~3.1.0",
     "angular-resource": "1.2.15",
