--- a/bower.json
+++ b/bower.json
@@ -7,11 +7,13 @@
     "es5-shim": "~2.1.0",
     "hoodie": "~0.8.2",
     "jquery": "~1.11.0",
+    "jquery-ui": "1.10.4",
     "bootstrap-sass-official": "~3.1.0",
     "angular-resource": "1.2.15",
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
-    "angular-route": "1.2.15"
+    "angular-route": "1.2.15",
+    "jsPlumb": "1.6.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
