--- a/package.json
+++ b/package.json
@@ -28,7 +28,12 @@
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.2.1",
     "grunt-hoodie": "~0.3.0",
-    "grunt-connect-proxy": "^0.1.10"
+    "grunt-connect-proxy": "^0.1.10",
+    "karma": "^0.12.16",
+    "grunt-karma": "^0.8.3",
+    "karma-jasmine": "~0.2.2",
+    "karma-safari-launcher": "~0.1.1",
+    "karma-ng-html2js-preprocessor": "^0.1.0"
   },
   "engines": {
     "node": ">=0.10.0"
