--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
     "angular-cookies": "1.2.15",
     "angular-sanitize": "1.2.15",
     "angular-route": "1.2.15",
-    "jsPlumb": "1.6.1"
+    "jsPlumb": "1.6.1",
+    "angular-bootstrap": "0.11.0",
+    "fontawesome": "4.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
