--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-route": "1.2.15",
     "jsPlumb": "1.6.1",
     "angular-bootstrap": "0.11.0",
-    "fontawesome": "4.1.0"
+    "fontawesome": "4.1.0",
+    "angular-underscore-module": "1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
