--- a/package.json
+++ b/package.json
@@ -34,12 +34,24 @@
     "grunt-karma": "^0.8.3",
     "karma-jasmine": "~0.2.2",
     "karma-safari-launcher": "~0.1.1",
-    "karma-ng-html2js-preprocessor": "^0.1.0"
+    "karma-ng-html2js-preprocessor": "^0.1.0",
+    "protractor": "0.23.1",
+    "http-server": "^0.6.1",
+    "shelljs": "^0.2.6"
   },
   "engines": {
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "postinstall": "bower install",
+
+    "start": "http-server -p 8000",
+    "test": "karma start test/karma.conf.js",
+
+    "update-webdriver": "webdriver-manager update",
+    "protractor": "protractor test/protractor-conf.js",
+    "test-single-run": "karma start test/karma.conf.js  --single-run",
+
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
   }
 }
