--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "shelljs": "^0.2.6",
     "karma-chrome-launcher": "~0.1.4",
     "karma-firefox-launcher": "~0.1.3",
-    "coffee-script": "~1.7.1"
+    "coffee-script": "~1.7.1",
+    "karma-coffee-preprocessor": "~0.2.1"
   },
   "engines": {
     "node": ">=0.10.0"
