--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "genius",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.15",
+    "angular": "1.3.0-build.2776+sha.c4b04ce",
     "json3": "~3.2.6",
     "es5-shim": "~2.1.0",
     "hoodie": "~0.8.2",
