--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-bootstrap": "0.11.0",
     "fontawesome": "4.1.0",
     "underscore": "1.6.0",
-    "highcharts-ng": "latest"
+    "highcharts-ng": "latest",
+    "js-priority-queue": "~0.0.4"
   },
   "devDependencies": {
     "angular-mocks": "1.2.15",
